@@ -1,3 +1,11 @@
+2011-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.96 released.
+
+        * Fixed code to complement FullAuto - now invokes
+          default set and other defaults in Solaris.
+
+
 2011-09-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.95 released.
